tests/ui/borrowck/issue-82032.stderr
error[E0596]: cannot borrow `*v` as mutable, as it is behind a `&` reference
  --> $DIR/issue-82032.rs:10:13
   |
LL |         for v in self.0.values() {
   |                  ---------------
   |                  |      |
   |                  |      help: use mutable method: `values_mut()`
   |                  this iterator yields `&` references
LL |             v.flush();
   |             ^^^^^^^^^ `v` is a `&` reference, so the data it refers to cannot be borrowed as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
